--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Fontaine Nathan</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Employé chez Sirius Info,Développeur Back / Front sur Odoo,Étudiant en BUT Informatique</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Employé chez E-Mothep,Analyste Intégrateur webMethods,Étudiant en BUT Informatique</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -96,13 +96,13 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="https://cdn.discordapp.com/attachments/1031648174995148841/1062897314458509394/image.png" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="https://cdn.discordapp.com/attachments/1062406643192692736/1246788616882225242/cv.jpg?ex=665da9e2&is=665c5862&hm=f6a62e15c94ae2a227593dd3b90fc5823b136535537b72da352ca40c2d44196d&" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Nom: </span> <span>Fontaine Nathan</span></p>
-                      <p><span class="title-s">Profession: </span> <span>Développeur Odoo</span></p>
+                      <p><span class="title-s">Profession: </span> <span>Analyste Intégrateur webMethods</span></p>
                       <p><span class="title-s">Email: </span> <span>natfon20@gmail.com</span></p>
                     </div>
                   </div>
@@ -121,17 +121,17 @@
                   </div>
                   <span>Java</span> <span class="pull-right">60%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>SQL</span> <span class="pull-right">90%</span>
+                  <span>SQL</span> <span class="pull-right">100%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Anglais</span> <span class="pull-right">90%</span>
+                  <span>Anglais</span> <span class="pull-right">100%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -145,18 +145,13 @@
                   </div>
                   <p class="lead">
                     Bonjour et bienvenue sur mon portfolio, 
-                    je suis Nathan Fontaine, j'ai 19 ans et je suis actuellement
+                    je suis Nathan Fontaine, j'ai 20 ans et je suis actuellement
                     Étudiant en BUT Informatique à Lille en alternance. 
                   </p>
                   <p class="lead">
-                    Je suis donc employé chez Sirius Info en parallèle, une entreprise
-                    qui améliore le quotidien des entreprises en installant et
-                    paramétrant un logiciel ERP nommé Odoo dans leur société.
-                  </p>
-                  <p class="lead">
-                    Odoo est un logiciel ERP créé en 2004 qui comporte énormément de
-                    modules aidant les entreprises dans leur gestion. (annulaire des employés,
-                    comptabilité, feuille de présences, etc.).
+                    Je suis donc employé chez E-Mothep en parallèle, une société de service
+                     composée d’une équipe d’experts à l’esprit critique, curieux et très 
+                     attentifs aux évolutions des nouvelles technologies.
                   </p>
                 </div>
               </div>
@@ -221,7 +216,7 @@
               <h2 class="s-title">Sport</h2>
               <p class="s-description text-center">
                 J'ai toujours adoré les sports en général, que ce soit en regarder
-                ou en faire !
+                ou en faire ! Plus spécifiquement l'escalade dernièrement !
               </p>
             </div>
           </div>
@@ -489,7 +484,7 @@
                       Alors veuillez me contacter par mail, téléphone voire via Linkedin !
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span>Dainville, 62000, France</li>
+                      <li><span class="ion-ios-location"></span>Lille-Hellemmes, 59260, France</li>
                       <li><span class="ion-ios-telephone"></span>06 99 69 43 36</li>
                       <li><span class="ion-email"></span> natfon20@gmail.com</li>
                     </ul>
