--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
                     Étudiant en BUT Informatique à Lille en alternance. 
                   </p>
                   <p class="lead">
-                    Je suis donc employé chez E-Mothep en parallèle, une société de service
-                     composée d’une équipe d’experts à l’esprit critique, curieux et très 
-                     attentifs aux évolutions des nouvelles technologies.
+                    Je suis donc employé chez E-Mothep en parallèle, une société de conseil et d’intégration
+                    de solutions basée sur Villeneuve d'Ascq.
                   </p>
                 </div>
               </div>
